@@ -28,13 +28,8 @@ import javax.swing.SwingUtilities;
 import java.awt.Component;
 import java.awt.Frame;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.Hashtable;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Vector;
+import java.util.*;
+
 import org.gjt.sp.jedit.gui.ErrorListDialog;
 import org.gjt.sp.jedit.msg.VFSUpdate;
 import org.gjt.sp.jedit.*;
@@ -121,7 +116,7 @@ public class VFSManager
 		// in new api, protocol always equals name
 		VFS vfs = (VFS)ServiceManager.getService(SERVICE,name);
 		if(vfs == null)
-			return (VFS)vfsHash.get(name);
+			return vfsHash.get(name);
 		else
 			return vfs;
 	} //}}}
@@ -140,7 +135,7 @@ public class VFSManager
 		{
 			VFS vfs = (VFS)ServiceManager.getService(SERVICE,protocol);
 			if(vfs == null)
-				vfs = (VFS)protocolHash.get(protocol);
+				vfs = protocolHash.get(protocol);
 
 			if(vfs != null)
 				return vfs;
@@ -181,7 +176,7 @@ public class VFSManager
 	/**
 	 * @deprecated Use <code>getVFSs()</code> instead.
 	 */
-	public static Enumeration getFilesystems()
+	public static Enumeration<VFS> getFilesystems()
 	{
 		return vfsHash.elements();
 	} //}}}
@@ -195,7 +190,7 @@ public class VFSManager
 	{
 		// the sooner ppl move to the new api, the less we'll need
 		// crap like this
-		List returnValue = new LinkedList();
+		List<String> returnValue = new LinkedList<String>();
 		String[] newAPI = ServiceManager.getServiceNames(SERVICE);
 		if(newAPI != null)
 		{
@@ -204,11 +199,10 @@ public class VFSManager
 				returnValue.add(newAPI[i]);
 			}
 		}
-		Enumeration oldAPI = vfsHash.keys();
+		Enumeration<String> oldAPI = vfsHash.keys();
 		while(oldAPI.hasMoreElements())
 			returnValue.add(oldAPI.nextElement());
-		return (String[])returnValue.toArray(new String[
-			returnValue.size()]);
+		return returnValue.toArray(new String[returnValue.size()]);
 	} //}}}
 
 	//}}}
@@ -342,7 +336,7 @@ public class VFSManager
 		{
 			error = true;
 
-			errors.addElement(new ErrorListDialog.ErrorEntry(
+			errors.add(new ErrorListDialog.ErrorEntry(
 				path,messageProp,args));
 
 			if(errors.size() == 1)
@@ -356,14 +350,14 @@ public class VFSManager
 						String caption = jEdit.getProperty(
 							"ioerror.caption" + (errors.size() == 1
 							? "-1" : ""),new Integer[] {
-							new Integer(errors.size()) });
+							Integer.valueOf(errors.size())});
 						new ErrorListDialog(
 							frame.isShowing()
 							? frame
 							: jEdit.getFirstView(),
 							jEdit.getProperty("ioerror.title"),
 							caption,errors,false);
-						errors.removeAllElements();
+						errors.clear();
 						error = false;
 					}
 				});
@@ -398,8 +392,7 @@ public class VFSManager
 			{
 				for(int i = 0; i < vfsUpdates.size(); i++)
 				{
-					VFSUpdate msg = (VFSUpdate)vfsUpdates
-						.get(i);
+					VFSUpdate msg = vfsUpdates.get(i);
 					if(msg.getPath().equals(path))
 					{
 						// don't send two updates
@@ -438,7 +431,7 @@ public class VFSManager
 				);
 				for(int i = 0; i < vfsUpdates.size(); i++)
 				{
-					EditBus.send((VFSUpdate)vfsUpdates.get(i));
+					EditBus.send(vfsUpdates.get(i));
 				}
 
 				vfsUpdates.clear();
@@ -452,26 +445,24 @@ public class VFSManager
 	private static WorkThreadPool ioThreadPool;
 	private static VFS fileVFS;
 	private static VFS urlVFS;
-	private static Hashtable vfsHash;
-	private static Hashtable protocolHash;
+	private static final Hashtable<String, VFS> vfsHash;
+	private static final Map<String, VFS> protocolHash;
 	private static boolean error;
-	private static Object errorLock;
-	private static Vector errors;
-	private static Object vfsUpdateLock;
-	private static List vfsUpdates;
+	private static final Object errorLock = new Object();
+	private static final Vector<ErrorListDialog.ErrorEntry> errors;
+	private static final Object vfsUpdateLock = new Object();
+	private static final List<VFSUpdate> vfsUpdates;
 	//}}}
 
 	//{{{ Class initializer
 	static
 	{
-		errorLock = new Object();
-		errors = new Vector();
+		errors = new Vector<ErrorListDialog.ErrorEntry>();
 		fileVFS = new FileVFS();
 		urlVFS = new UrlVFS();
-		vfsHash = new Hashtable();
-		protocolHash = new Hashtable();
-		vfsUpdateLock = new Object();
-		vfsUpdates = new ArrayList(10);
+		vfsHash = new Hashtable<String, VFS>();
+		protocolHash = new Hashtable<String, VFS>();
+		vfsUpdates = new ArrayList<VFSUpdate>(10);
 	} //}}}
 
 	private VFSManager() {}
